# moa-lander

./: CMakeLists.txt  README.md  lander-full.xcf  lander.xcf  person.xcf  raket.xcf  sparks.xcf
src/: game.cc  main.cc
src/include/: game.hh
